changes in hellow

--- a/src/app/Pages/CommonPages/header/header.component.html
+++ b/src/app/Pages/CommonPages/header/header.component.html
@@ -2,7 +2,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-1 col-sm-3">
-            <img class="logo" src="assets/Images/logo.png">
+            <!-- <img class="logo" src="assets/Images/logo.png"> -->
+                <img class="logo" src="assets/Images/hello.webp">
+
         </div>
         <div class="col-lg-2 ">
             <img class="open" src="assets/Icons/open.png" *ngIf="showSidebar=='0'" (click)="open()">
