--- a/src/app/Pages/CountryManager/WorkingDetails/Diagnostic/diagnostic-agenda/diagnostic-agenda.component.css
+++ b/src/app/Pages/CountryManager/WorkingDetails/Diagnostic/diagnostic-agenda/diagnostic-agenda.component.css
@@ -75,7 +75,8 @@
 }
 
 .tab a:hover {
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     color:white;
   }
   
