--- a/src/app/Pages/CountryManager/WorkingDetails/Doctor/agenda/agenda.component.css
+++ b/src/app/Pages/CountryManager/WorkingDetails/Doctor/agenda/agenda.component.css
@@ -56,7 +56,8 @@ table {
 }
 
 th {
-  background-color: #322B6B;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   color: white;
   text-align: center;
   padding: 5px;
