--- a/src/app/Pages/DiagnosticCenter/Diagnostics/diagnostic-appointments/diagnostic-appointments.component.css
+++ b/src/app/Pages/DiagnosticCenter/Diagnostics/diagnostic-appointments/diagnostic-appointments.component.css
@@ -59,7 +59,8 @@
     border: none;
   }
   .cancel{
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     color:white;
     padding: 8px;
     border-radius: 10px;
