--- a/src/app/Pages/Doctor/my-appointments/my-appointments.component.css
+++ b/src/app/Pages/Doctor/my-appointments/my-appointments.component.css
@@ -43,7 +43,8 @@ table {
 }
 
 th {
-  background-color: #322B6B;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   color: white;
   text-align: center;
 
@@ -99,7 +100,8 @@ th {
 } */
 
 .Video:hover {
-  background-color: #322B6B;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   color: white;
   /* cursor: pointer; */
   padding: 6px;
@@ -365,7 +367,8 @@ hr.new5 {
 }
 .paybutton{
   padding: 3px;
-  background-color: #322b6b;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   color:white;
   border-radius: 10px;
   width: 92px;
