--- a/src/app/Pages/DiagnosticCenter/Diagnostics/diagnostic-orders/diagnostic-orders.component.css
+++ b/src/app/Pages/DiagnosticCenter/Diagnostics/diagnostic-orders/diagnostic-orders.component.css
@@ -36,7 +36,8 @@ table {
 }
 
 th {
-  background-color: #322b6b;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   color: white;
   text-align: center;
   padding: 5px;
