--- a/src/app/Pages/Doctor/AppointmentActionPages/diagnostc-test/diagnostc-test.component.css
+++ b/src/app/Pages/Doctor/AppointmentActionPages/diagnostc-test/diagnostc-test.component.css
@@ -10,7 +10,8 @@
 
 .manually:hover {
     padding: 5px;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     border: 2px solid #322b6b;
     color: white;
     border-radius: 10px;
