--- a/src/app/Pages/Doctor/book-appointment/book-appointment.component.css
+++ b/src/app/Pages/Doctor/book-appointment/book-appointment.component.css
@@ -20,7 +20,8 @@
 
   padding: 5px;
   border: 3px solid #322B6B;
-  background-color: #322B6B;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   border-radius: 10px;
   color: white;
 }
@@ -41,7 +42,8 @@
   border: none;
 }
 .cancel{
-  background-color: #322b6b;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
   color:white;
   padding: 8px;
   border-radius: 10px;
