--- a/src/app/Pages/Doctor/book-doctor/book-doctor.component.css
+++ b/src/app/Pages/Doctor/book-doctor/book-doctor.component.css
@@ -17,7 +17,8 @@
     display: inline-block;
     padding: 8px;
     color: white;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     text-align: center;
     cursor: pointer;
     width: 100%;
