--- a/src/app/Pages/Doctor/dashboard/dashboard.component.css
+++ b/src/app/Pages/Doctor/dashboard/dashboard.component.css
@@ -7,7 +7,8 @@
     margin-top: 10px;
   }
   .optionsboxdown {
-    background-color:#2e2d6e;;
+    background: linear-gradient(180deg, #2E86C1, #2E86C1);
+;;
     color: white;
     text-align: center;
     padding: 25px;
