--- a/src/app/Pages/Masters/mastercomponents/vitals-promocode-master/vitals-promocode-master.component.css
+++ b/src/app/Pages/Masters/mastercomponents/vitals-promocode-master/vitals-promocode-master.component.css
@@ -1,6 +1,7 @@
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
 }
 .nav-link {
     display: block;
