--- a/src/app/Pages/Nurse/Nuses/nurse-admin-dash/nurse-admin-dash.component.css
+++ b/src/app/Pages/Nurse/Nuses/nurse-admin-dash/nurse-admin-dash.component.css
@@ -7,7 +7,8 @@
   margin-top: 10px;
 }
 .optionsboxdown {
-  background-color:#2e2d6e;;
+  background: linear-gradient(180deg, #2E86C1, #AED6F1);
+;;
   color: white;
   text-align: center;
   padding: 7px;
