--- a/src/app/Pages/VideoCall/video-call/video-call.component.css
+++ b/src/app/Pages/VideoCall/video-call/video-call.component.css
@@ -122,7 +122,8 @@
     padding: 4px;
     color: white;
     border-radius: 10px;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     border: 2px solid #322b6b;
     width: 193px;
     font-size: 12px;
@@ -186,7 +187,8 @@
     /* padding: 9px;
     width: 100%;
     height: 35px;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     border-radius: 5px;
     color: white;
     border: none;
@@ -194,7 +196,8 @@
     padding: 10px;
     width: 100%;
     height: 40px;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     border-radius: 5px;
     color: white;
     border: none;
@@ -206,7 +209,8 @@
     padding: 10px;
     width: 100%;
     height: 40px;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     border-radius: 5px;
     color: white;
     border: none;
@@ -291,7 +295,8 @@
 }
 
 .documents {
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     color: white;
     /* padding: 10px; */
 }
@@ -325,7 +330,8 @@
     padding: 10px;
     width: 100%;
     height: 40px;
-    background-color: #322b6b;
+    background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
     border-radius: 5px;
     color: white;
     border: none;
