--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -8,7 +8,7 @@
       <div style="background-color: #FFFF;padding: 8%;border-radius: 20px;">
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/Images/logo.png" class="loginimge">
+            <img src="assets/Images/hello.webp" class="loginimge">
           </div>
           <div class="col-4">
             <!-- <img src="assets/Images/logo.png" class="loginimge"> -->
