--- a/src/app/Pages/sidebar/sidebar.component.css
+++ b/src/app/Pages/sidebar/sidebar.component.css
@@ -4,9 +4,12 @@
    z-index: 1;
    top: 0;
    left: 0;
-   background: linear-gradient(#322b6b, #322b6b);
+   /* background: linear-gradient(#322b6b, #322b6b); */
+   background: linear-gradient(180deg, #2E86C1, #AED6F1);
 
-   color: white;
+
+
+   color: #ffffff;
    padding: 10px;
    /* overflow-x: hidden; */
    /* padding-top: 10px;
@@ -18,20 +21,21 @@
    padding: 0px 0px 9px 0px;
    text-decoration: none;
    font-size: 14px;
-   color: #f9fbf9;
+   color: #ffffff;
    display: block;
 }
 
 .sidenav a:hover {
-   color:
-      #f18235;
+   color:#003b73;
    cursor: pointer;
 }
 
 
 .togglebtn {
-   background-color: #322b6b;
-   ;
+   /* background: linear-gradient(180deg, #2E86C1, #AED6F1);
+ */
+   background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
    border: none;
    color: aliceblue;
    font-size: 15px;
@@ -98,7 +102,8 @@ font-size: 17px; */
 }
 
 .tab a:hover {
-   background-color: #322b6b;
+   background: linear-gradient(180deg, #2E86C1, #AED6F1);
+
 }
 
 .tab a.active {
